# chipulator8

./: Cargo.toml  README.md
src/: chip8.rs  main.rs
