[package]
name = "chipulator8"
version = "0.1.0"
authors = ["Tobias Tschinkowitz <tobias.tschinkowitz@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"

[dependencies.sdl2]
version = "0.33"
default-features = false
features = ["gfx"]